install_data('io.elementary.meteo.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
)

install_data(
    join_paths('io.elementary.meteo.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)

install_data('io.elementary.meteo.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)
