install_data (
    meson.project_name () + '.gschema.xml',
    install_dir: join_paths (get_option ('datadir'), 'glib-2.0/schemas')
)

install_data (
    meson.project_name () + '.svg',
    install_dir: join_paths (get_option ('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)

install_data (
    meson.project_name () + '.desktop',
    install_dir: join_paths (get_option ('datadir'), 'applications')
)
